[package]
name = "cu29-helpers"
description = "This is an helper to build quickly a skeleton of an application with Copper. It cannot be used independently from the copper project."
documentation = "https://docs.rs/cu29-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cu29-traits = { workspace = true }
cu29-unifiedlog = { workspace = true }
cu29-log = { workspace = true }
cu29-log-runtime = { workspace = true }
cu29-clock = { workspace = true }
simplelog = "0.12.2"
