[package]
name = "cu29-log-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["simplelog"]  # Used from conditional compilation

[dependencies]
cu29-log = { workspace = true }
cu29-traits = { workspace = true }
cu29-clock = { workspace = true }
cu29-intern-strs = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
kanal = { version = "0.1.0-pre8" }
once_cell = "1.19.0"
simplelog = "0.12.2"
log = "0.4.21"