[package]
name = "cu29-log-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["cu29-log", "cu29-log-runtime"]  # proc macro

[dependencies]
cu29 = { workspace = true }
cu29-log = { workspace = true }
cu29-log-derive = { workspace = true }
cu29-log-runtime = { workspace = true }
cu29-helpers = { workspace = true }
serde = { workspace = true }
