[package]
name = "cu29-soa-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true  }
rand = "0.9.0-alpha.1"

[lib]
proc-macro = true