[package]
name = "cu29-soa-derive"
description = "This is fixed size implementation for SOAs (Struct of Arrays). It can be used independently from the Copper project."
documentation = "https://docs.rs/cu29-soa-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true  }
rand = "0.9.0-alpha.2"
syntect = "5.2.0"

[dev-dependencies]
bincode = { workspace = true  }

[lib]
proc-macro = true
