[package]
name = "horus-caterpillar"
version = "1.1.0-dev"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
horus = { git = "https://github.com/softmata/horus", tag = "v0.1.6", default-features = false }
serde = { version = "=1.0.211", default-features = false, features = [
  "derive",
] }
