[package]
name = "horus-caterpillar"
version = "1.1.0-dev"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
# HORUS is the third-party benchmark subject, so keep it pinned to a released tag.
horus = { git = "https://github.com/softmata/horus", tag = "v0.1.6", default-features = false }
serde = { version = "=1.0.211", default-features = false, features = [
  "derive",
] }
