[package]
name = "cu-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A coordinate frame transformation library for copper-rs, similar to tf2 in ROS2"

[dependencies]
cu29 = { path = "../../core/cu29", version = "0.7.0" }
cu-spatial-payloads = { path = "../payloads/cu_spatial_payloads", version = "0.7.0" }
petgraph = "0.8.1"  # For transform tree management
thiserror = "1.0"   # For error handling
bincode = { workspace = true }   # For serialization
serde = { workspace = true }
smallvec = { workspace = true } # For small vector optimizations
rand = "0.9.0"      # For random number generation in cache cleanup
dashmap = "6.1.0"
uom = "0.35.0"       # For units of measurement support
num-traits = "0.2.18" # For numeric trait implementations

[features]
default = []

[dev-dependencies]
approx = "0.5"      # For float comparisons in tests
